--- a/Views/MugOrder/CourseConducted.cshtml
+++ b/Views/MugOrder/CourseConducted.cshtml
@@ -58,7 +58,7 @@
                     <td>@item.Venue</td>
                     <td>
                         <a asp-action="AttendanceUpdatedPast" asp-route-id="@item.CourseId">Attendance</a>
-                        <a asp-action="" asp-route-id="">Survey</a>
+                        <a asp-action="PastCourseSurveyResult" asp-route-id="@item.CourseId">Survey</a>
                     </td>
                 </tr>
             }
