--- a/Views/MugOrder/CourseSurveyResult.cshtml
+++ b/Views/MugOrder/CourseSurveyResult.cshtml
@@ -20,7 +20,7 @@
                 <tr>
                     <th>ID</th>
                     <th>Participant Name</th>
-                    <th>Survey</th>
+                    <th>Status</th>
                 </tr>
 
                 @for (int i = 0; i < Model.Count(); i++)
